; ModuleID = '/home/carl/AnghaBench/linux/drivers/isdn/capi/extr_capiutil.c_capi_cmd2str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/isdn/capi/extr_capiutil.c_capi_cmd2str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mnames = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [16 x i8] c"INVALID_COMMAND\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @capi_cmd2str(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i8**, i8*** @mnames, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @command_2_index(i32 %7, i32 %8)
  %10 = getelementptr inbounds i8*, i8** %6, i64 %9
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  br label %15

15:                                               ; preds = %14, %2
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i64 @command_2_index(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
